--- a/workshops/python/python.tex
+++ b/workshops/python/python.tex
@@ -13,6 +13,7 @@
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage[today,nofancy]{svninfo}
+\usepackage[binary,amsmath]{SIunits}
 \usepackage[listings,varioref,prettyref]{miunmisc}
 \setcitestyle{numbers,square}
 \bibliographystyle{alpha}
@@ -66,7 +67,19 @@
 
 \begin{frame}{Övningar}
   \begin{enumerate}
-    \item \dots
+    \item Skriv ett program som beräknar överföringshastigheter.
+      Användaren ska mata in mängden data och tiden överföringen ska kunna 
+      genomföras på.
+      Ange alltid i enheten \mega\bit\per\second.
+
+    \item Skriv funktioner som konverterar mellan \mega\bit\per\second och 
+      \mebi\bit\per\second.
+
+    \item Skriv funktioner som konverterar mellan \mega\bit\per\second och 
+      \bit\per\second, etcetera.
+
+    \item Automatiskt välj en lämplig hastighet att skriva ut med.
+      (Introduktion av flödeskontrollsatser.)
   \end{enumerate}
 \end{frame}
 
