Enables python workshop in recursive build, prepares for second python workshop
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1327 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/python2.tex
+++ b/workshops/python/python2.tex
@@ -30,7 +30,7 @@
 }
 
 \title{%
-  Övningar för Python
+  Övningar för Python, del 2
 }
 \author{Daniel Bosk\footnote{%
   Detta verk är tillgängliggjort under licensen Creative Commons 
