Renames present to report, focus on reports not presentations
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1328 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -176,7 +176,7 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 \input{computer-lit.tex}
 
 \subsection{Föreläsning om rapportskrivning och presentationsteknik}
-\input{present-lit.tex}
+\input{report-lit.tex}
 
 \subsection{Projektet}
 Projektet syftar till att genomföra en mindre studie som fördjupning inom 
