Correct bug for missing space after units
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1330 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/python1.tex
+++ b/workshops/python/python1.tex
@@ -71,10 +71,10 @@
       genomföras på.
       Ange alltid i enheten \mega\bit\per\second.
 
-    \item Skriv funktioner som konverterar mellan \mega\bit\per\second och 
+    \item Skriv funktioner som konverterar mellan \mega\bit\per\second\ och 
       \mebi\bit\per\second.
 
-    \item Skriv funktioner som konverterar mellan \mega\bit\per\second och 
+    \item Skriv funktioner som konverterar mellan \mega\bit\per\second\ och 
       \bit\per\second, etcetera.
 
     \item Automatiskt välj en lämplig hastighet att skriva ut med.
