--- a/lectures/python/python1.tex
+++ b/lectures/python/python1.tex
@@ -26,7 +26,7 @@
 \setbeamertemplate{footline}{\insertframenumber}
 
 \title{%
-  Python del 1
+  Python, del 1
 }
 \author{Daniel Bosk\footnote{%
   \tiny
