Adds solution .py to slides
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1342 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/python1.tex
+++ b/workshops/python/python1.tex
@@ -82,6 +82,10 @@
   \end{enumerate}
 \end{frame}
 
+\begin{frame}[fragile,allowframebreaks]{Lösningsförslag}
+  \lstinputlisting[style=code,language=python]{speed1.py}
+\end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%
 
