Adds tasks for second python workshop
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1344 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/python/python2.tex
+++ b/workshops/python/python2.tex
@@ -67,19 +67,15 @@
 
 \begin{frame}{Övningar}
   \begin{enumerate}
-    \item Skriv ett program som beräknar överföringshastigheter.
-      Användaren ska mata in mängden data och tiden överföringen ska kunna 
-      genomföras på.
-      Ange alltid i enheten \mega\bit\per\second.
+    \item Utöka speed1.py så att användaren kan ange enhet på inmatat data 
+      istället för att måsta ange med en given enhet.
 
-    \item Skriv funktioner som konverterar mellan \mega\bit\per\second och 
-      \mebi\bit\per\second.
+    \item Utöka programmet vidare med en slinga som låter användaren köra fler 
+      än en konvertering per körning.
 
-    \item Skriv funktioner som konverterar mellan \mega\bit\per\second och 
-      \bit\per\second, etcetera.
+    \item Utöka programmet med en loggningsfunktion som skriver alla 
+      konverteringar till en fil på disk.
 
-    \item Automatiskt välj en lämplig hastighet att skriva ut med.
-      (Introduktion av flödeskontrollsatser.)
   \end{enumerate}
 \end{frame}
 
