--- a/workshops/python/python2.tex
+++ b/workshops/python/python2.tex
@@ -78,6 +78,10 @@
   \end{enumerate}
 \end{frame}
 
+\begin{frame}[fragile,allowframebreaks]{Lösningsförslag}
+  \lstinputlisting[style=code,language=python]{speed2.py}
+\end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%
 
