Final version of lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1353 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/latex/examples.tex
+++ b/lectures/latex/examples.tex
@@ -19,8 +19,7 @@
 	\maketitle
 
 	\begin{abstract}
-		\noindent
-		En första paragraf kan se ut så här.
+    En första paragraf kan se ut så här.
 		Det krävs en del text för att det ska se vettigt ut.
 		Det räcker inte med några få ord för då fyllar man inte ens ut en rad.
 
@@ -36,25 +35,22 @@
 
 	\section[Första avsnittet]{Det första avsnittet i dokumentet}
 	\label{sec:First}
-	\noindent
-	Här fyller vi på med några meningar för att fylla ut en paragraf och sedan 
-	skapa ytterligare en.
+  Här fyller vi på med några meningar för att fylla ut en paragraf och sedan 
+  skapa ytterligare en.
 
 	Här kommer nästa, en mycket kort paragraf.
 
 	\subsection[Delavsnittet]{Ett lämpligt delavsnitt}
 	\label{sub:Del}
-	\noindent
-	Här fyller vi på med några meningar för att fylla ut en paragraf och sedan 
-	skapa ytterligare en.
+  Här fyller vi på med några meningar för att fylla ut en paragraf och sedan 
+  skapa ytterligare en.
 
 	Här kommer nästa, en mycket kort paragraf.
 
 
 	\section{Referenshantering}
 	\label{sec:Ref}
-	\noindent
-	Enligt \citet{Knuth1997toa} finns ingen algoritm för att lösa problemet.
+  Enligt \citet{Knuth1997tao} finns ingen algoritm för att lösa problemet.
 
 	Vi har summan \( \sum_{i=1}^n i = \frac{n (n + 1)}{2} \).
 	Men sedan har vi även summan \[ \sum_{i=1}^n i = \frac{n (n + 1)}{2} \].
@@ -69,9 +65,8 @@
 
 	\section{Figurer och tabeller}
 	\label{sec:FigTab}
-	\noindent
-	För att illustrera detta se \prettyref{fig:bild} och 
-	\prettyref{tbl:SannolikhetstabellSpråk}.
+  För att illustrera detta se \prettyref{fig:bild} och 
+  \prettyref{tbl:SannolikhetstabellSpråk}.
 	Men först bör du ha läst \prettyref{sec:First}.
 
 	\begin{figure}
