Final changes to make latex examples work
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1355 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/latex/examples.tex
+++ b/lectures/latex/examples.tex
@@ -9,7 +9,7 @@
 \usepackage{varioref}
 \usepackage[binary]{SIunits}
 \usepackage{graphicx}
-\usepackage[varioref,prettyref,natbib]{miunmisc}
+\bibliographystyle{sweplnat}
 
 \author{Daniel Bosk}
 \title{Testdokument}
@@ -53,14 +53,14 @@
   Enligt \citet{Knuth1997tao} finns ingen algoritm för att lösa problemet.
 
 	Vi har summan \( \sum_{i=1}^n i = \frac{n (n + 1)}{2} \).
-	Men sedan har vi även summan \[ \sum_{i=1}^n i = \frac{n (n + 1)}{2} \].
+  Men sedan har vi även summan \[ \sum_{i=1}^n i = \frac{n (n + 1)}{2}. \]
 	Detta ger resultatet:
 	\[ f(a) = \left\{
 		\begin{array}{ll}
 			y & \text{om } a=x \\
 			x & \text{om } a=y
 		\end{array}
-		\right\} = f^{-1}(a), \]
+		\right\} = f^{-1}(a). \]
 
 
 	\section{Figurer och tabeller}
