Final version for workshop
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1360 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/workshops/latex/latex.tex
+++ b/workshops/latex/latex.tex
@@ -15,7 +15,7 @@
 \usepackage[today,nofancy]{svninfo}
 \usepackage[listings,varioref,prettyref]{miunmisc}
 \setcitestyle{numbers,square}
-\bibliographystyle{alpha}
+\bibliographystyle{swealpha}
 
 \svnInfo $Id$
 
@@ -66,16 +66,24 @@
 
 \begin{frame}{Övningar}
   \begin{enumerate}
-    \item \dots
+    \item Skapa ett enkelt dokument med article-klassen.
+    \item Kompilera dokumentet med latexmk(1).
+    \item Skapa en punktlista.
+    \item Skapa en numrerad lista.
+    \item Skapa en figur, hänvisa till den i texten.
+    \item Skapa en tabell, hänvisa till den i texten.
+    \item Referera till kursboken \citep{Brookshear2012csa}.
+    \item Inkludera källkoden för dokumentet som en bilaga i dokumentet.
+    \item Titta på källkoden för kursens projektlydelse.
   \end{enumerate}
 \end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%
 
-%\begin{frame}{References}
-%  \bibliography{literature}
-%\end{frame}
+\begin{frame}{References}
+  \bibliography{literature}
+\end{frame}
 
 \end{document}
 
