Adds a solution to the lab
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1369 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/python/python.tex
+++ b/labs/python/python.tex
@@ -5,6 +5,7 @@
 \usepackage[hyphens]{url}
 \usepackage{hyperref}
 \usepackage[today,nofancy]{svninfo}
+\usepackage{color}
 \usepackage{listings} 
 \usepackage{prettyref,varioref}
 \usepackage[natbib,style=numeric-comp,maxnames=99]{biblatex}
@@ -112,6 +113,11 @@ avsluta.
 \label{sec:exam}
 Lämna in din källkod tillika programfil (.py-fil) i inlämningslådan 
 i lärplattform\-en för bedömning.
+
+\begin{solution}
+  Ett enkelt lösningsförslag:
+  \lstinputlisting[style=code,language=Python]{cisco.py}
+\end{solution}
 
 
 \printbibliography
