--- a/workshops/latex/latex.tex
+++ b/workshops/latex/latex.tex
@@ -78,6 +78,10 @@
   \end{enumerate}
 \end{frame}
 
+\begin{frame}[fragile,allowframebreaks]{Lösningsförslag}
+  \lstinputlisting{dokument.tex}
+\end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%
 
