Work in progress on slides on report writing
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1386 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/report/report.tex
+++ b/lectures/report/report.tex
@@ -23,9 +23,8 @@
 }
 \setbeamertemplate{footline}{\insertframenumber}
 
-\title[Introduktion]{%
-	Introduktion till kursen\\
-	DT001G Informationsteknologi grundkurs
+\title{%
+  Vetenskapliga undersökningar och rapportskrivning
 }
 \author{Daniel Bosk\footnote{%
 	\tiny
@@ -77,53 +76,11 @@
 %   15 and 30 frames, all told.
 
 
-\section{Formalia}
-
-\subsection{Schema}
-\begin{frame}{Schema}
-	\dots
-\end{frame}
-
-\subsection{Lärplattform}
-\begin{frame}{Lärplattform}
-\end{frame}
-
-\subsection{Litteratur}
-\begin{frame}{Litteratur}
-	\emph{Computer science: an overview} \cite{Brookshear2012csa}.
-\end{frame}
-
-\subsection{Examination}
-\begin{frame}{Examination}
-	\dots
-\end{frame}
-\begin{frame}{Laborationer}
-	\dots
-\end{frame}
-\begin{frame}{Seminarier}
-	\dots
-\end{frame}
-\begin{frame}{Projekt}
-	\dots
-\end{frame}
-
-
-\section[Historia]{Datavetenskapens historia}
-\begin{frame}{Datavetenskapens historia}
-	\dots
-\end{frame}
-
-
-\section[Introduktion]{Introduktion till datavetenskap}
-\begin{frame}{Introduktion till datavetenskap}
-	\dots
-\end{frame}
-
 
 %%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Referenser}
-	\bibliography{../../literature}
+  \bibliography{literature}
 \end{frame}
 
 \end{document}
