--- a/project/project.tex
+++ b/project/project.tex
@@ -247,8 +247,9 @@ kan besvaras ska ges.
 
 Den färdiga rapporten i PDF-format tillsammans med källkod lämnas in 
 i inlämningslådan i lärplattformen.
-Omfattningen bör vara omkring sju (7) sidor text, utöver detta tillkommer 
-titel, sammanfattning (abstract), innehållsförteckning och referenslista.
+Omfattningen bör vara omkring sju (7) sidor text, \emph{utöver} detta 
+tillkommer titel, sammanfattning (abstract), innehållsförteckning och 
+referenslista.
 Rapportens förstasida ska ha titel och författare med e-postadress\footnote{%
   Ett tips är att använda kommandot \texttt{\textbackslash footnote}.
 }, datum och sammanfattning (abstract).
@@ -257,7 +258,8 @@ exempel.
 
 Utöver detta föreligger följande krav:
 \begin{itemize}
-  \item Rapporten ska vara typsatt med LaTeX.
+  \item Rapporten ska vara typsatt med LaTeX, använd dokumentklassen article.
+    Typsnittstorlek och marginaler ska vara LaTeX:s standardinställningar.
   \item Rapporten ska ha minst en figur eller tabell.
   \item Rapportens referenser ska göras med diverse \texttt{\textbackslash 
     cite}-kommandon tillsammans med en BibTeX-databas med alla referenser.
